# A-Real-time-Renderer-and-a-simple-editor

./: .gitignore  CMakeLists.txt  README.CN.md  README.EN.md  README.md
Renderer/: CMakeLists.txt
Renderer/common/include/: AssimpLoader.h  CoroutineResourceManager.h  CoroutineThreadPoolScheduler.h  DragHandler.h  EnhancedThreadPool.h  FileDialog.h  FileDialogManager.h  InputManager.h  LoadingDialog.h  Logger.h  PriorityTaskQueue.h  RaycastSystem.h  RaycastUtils.h  STBImage.h  Task.h  TaskPriority.h  ThreadPool.h  TransformManager.h  Window.h
Renderer/common/src/: AssimpLoader.cpp  CoroutineResourceManager.cpp  CoroutineThreadPoolScheduler.cpp  DragHandler.cpp  EnhancedThreadPool.cpp  FileDialog.cpp  FileDialogManager.cpp  InputManager.cpp  Logger.cpp  RaycastUtils.cpp  STBImage.cpp  ThreadPool.cpp  TransformManager.cpp  Window.cpp
Renderer/rendering/include/: Camera.h  Light.h  Material.h  Mesh.h  Model.h  ObjectTransformSystem.h  Renderable.h  Renderer.h  Scene.h  Shader.h  ShadowMap.h  Texture.h  Transform.h
Renderer/rendering/src/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ObjectTransformSystem.cpp  RaycastSystem.cpp  Renderable.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  Transform.cpp
application/: Application.h  CMakeLists.txt  GUI.cpp  GUI.h  application.cpp  main.cpp
assets/shaders/: deferred_geometry_fragment.glsl  deferred_geometry_vertex.glsl  deferred_lighting_direct_fragment.glsl  deferred_lighting_fragment.glsl  deferred_lighting_vertex.glsl  hiz_generate.glsl  irradiance_fragment.glsl  phong_fragment.glsl  plane_reflection_fragment.glsl  prefilter_fragment.glsl  prefilter_vertex.glsl  shadow_map_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  ssao_apply_fragment.glsl  ssao_apply_vertex.glsl  ssao_blur_fragment.glsl  ssao_compute.glsl  ssgi_composition_fragment.glsl  ssgi_compute.glsl  ssgi_denoise_fragment.glsl  ssgi_denoise_vertex.glsl  vertex.glsl
cmake/: FindAssimp.cmake  FindGLAD.cmake  FindGLFW.cmake  FindGLM.cmake  FindImGui.cmake  FindSTB.cmake  FindSpdlog.cmake  FindTinyEXR.cmake
